--- a/MeuPonto_Blazor/MeuPonto_Blazor.csproj
+++ b/MeuPonto_Blazor/MeuPonto_Blazor.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.6.5" />
+  </ItemGroup>
+
 </Project>
