--- a/MeuPonto_Blazor/appsettings.json
+++ b/MeuPonto_Blazor/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Persist Security Info=False;User ID=sa;Password=Lurf3191*;Initial Catalog=Apontamento1;Data Source=NLYBSTQVP5NB579\\MSSQLSERVER01"
+  }
 }
